[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Level1-6.gd" type="Script" id=1]
[ext_resource path="res://Scenes/tileset1.tres" type="TileSet" id=2]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/next_W.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Book.tscn" type="PackedScene" id=6]
[ext_resource path="res://Art/book2_clock.jpg" type="Texture" id=7]

[node name="Level1-6" type="Node2D"]

position = Vector2( -99.3073, -951.14 )
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 131072, 3, 0, 131088, 3, 0, 262144, 3, 0, 262160, 3, 0, 393216, 3, 0, 393232, 3, 0, 524288, 3, 0, 524304, 3, 0, 655360, 3, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 3, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 3, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button1" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 674.495, 287.196 )

[node name="Button2" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( 799.838, 404.756 )

[node name="Button3" parent="." index="3" instance=ExtResource( 3 )]

position = Vector2( 674.071, 525.645 )

[node name="Button4" parent="." index="4" instance=ExtResource( 3 )]

position = Vector2( 543.292, 406.266 )

[node name="player" parent="." index="5" instance=ExtResource( 4 )]

position = Vector2( 220.025, 526.001 )

[node name="Label" type="Label" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 223.0
margin_top = 176.0
margin_right = 464.0
margin_bottom = 252.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Congratulations!
 you passed the test!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="next_W" parent="." index="7" instance=ExtResource( 5 )]

position = Vector2( 909.958, 195.389 )
next_world = "res://Levels/Level1-7.tscn"
nextLevelText = null

[node name="Book" parent="." index="8" instance=ExtResource( 6 )]

position = Vector2( 251.875, 372.825 )

[node name="Sprite_book" type="Sprite" parent="." index="9"]

position = Vector2( 256.873, 373.935 )
scale = Vector2( 0.186103, 0.182618 )
texture = ExtResource( 7 )


